--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,7 +119,7 @@
                         android:layout_row="0"
                         android:layout_column="3"
                         android:layout_marginTop="12dp"
-                        android:text="Inventory"
+                        android:text="Product List"
                         android:textColor="#6f6f6f"
                         android:textSize="18sp" />
 
