--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -24,9 +24,12 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_width="307dp"
+        android:layout_height="41dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="19dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
         android:text="Add Product"
@@ -174,6 +177,7 @@
             android:fontFamily="@font/poppinsmedium"
             android:textColorHint="#546E7A"
             tools:ignore="TextContrastCheck,TextContrastCheck" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <CheckBox
@@ -222,31 +226,35 @@
         android:layout_marginTop="20dp"
         android:layout_weight="1" />
 
+
     <Button
         android:id="@+id/addProductButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textInputLayoutDescription"
-        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="156dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="99dp"
+        android:layout_toEndOf="@+id/imagepreview"
         android:background="@drawable/custom_button"
         android:text="Add product"
         android:textColor="#FFFFFF" />
 
-    <Button
-        android:id="@+id/ImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/addProductButton"
+    <ImageView
+        android:id="@+id/imagepreview"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_below="@+id/textInputLayoutDescription"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="156dp"
-        android:background="@drawable/custom_button"
-        android:text="Image Upload"
-        android:textColor="#FFFFFF" />
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="38dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@mipmap/ic_launcher_round" />
+
+
 </RelativeLayout>
