--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -21,13 +21,61 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="16dp">
-
-        <TextView
-            android:id="@+id/text_brand_variant"
-            android:layout_width="wrap_content"
+        <GridLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Brand"
-            android:textColor="#6f6f6f"
-            android:textSize="18sp" />
+            android:alignmentMode="alignMargins"
+            android:columnCount="2"
+            android:columnOrderPreserved="false"
+            android:rowCount="2">
+
+        <ImageView
+            android:id="@+id/ItemPreview"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="10dp"
+            tools:srcCompat="@tools:sample/avatars" />
+             <GridLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:alignmentMode="alignMargins"
+                 android:columnCount="1"
+                 android:columnOrderPreserved="false"
+                 android:rowCount="2">
+                 <TextView
+                     android:id="@+id/BarcodeDetail"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="Barcode"
+                     android:textColor="#6f6f6f"
+                     android:textSize="18sp" />
+                 <TextView
+                     android:id="@+id/BrandDetail"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginTop="3dp"
+                     android:text="Brand"
+                     android:textColor="#6f6f6f"
+                     android:textSize="18sp" />
+                 <TextView
+                     android:id="@+id/VariantDetail"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginTop="3dp"
+                     android:text="Variant"
+                     android:textColor="#6f6f6f"
+                     android:textSize="18sp" />
+                 <TextView
+                     android:id="@+id/DescriptionDetail"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginTop="3dp"
+                     android:text="Description"
+                     android:textColor="#6f6f6f"
+                     android:textSize="18sp" />
+             </GridLayout>
+        </GridLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
