--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,6 +171,7 @@
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/settingspbutton"
                 android:layout_width="wrap_content"
@@ -205,10 +206,10 @@
                         android:layout_row="0"
                         android:layout_column="3"
                         android:layout_marginTop="12dp"
+                        android:gravity="center"
                         android:text="Settings"
                         android:textColor="#6f6f6f"
-                        android:textSize="18sp"
-                        android:gravity="center" />
+                        android:textSize="18sp" />
 
 
                 </LinearLayout>
