--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -1,260 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Add_Product">
 
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="60dp"
-        android:layout_height="51dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="36dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.046"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+    <LinearLayout
+        android:id="@+id/MainLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="307dp"
-        android:layout_height="41dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="19dp"
-        android:fontFamily="@font/poppinsbold"
-        android:gravity="center"
-        android:text="Add Product"
-        android:textColor="#FF5722"
-        android:textSize="30sp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutBarcode"
-        android:layout_width="227dp"
-        android:layout_height="70dp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="17dp"
-        android:enabled="true"
-        android:hint="Barcode"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ap_barcode"
-            android:layout_width="227dp"
+        <TextView
+            android:id="@+id/branding"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_barcode"
-            android:enabled="true"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColorHint="#546E7A"
-            tools:ignore="TextContrastCheck,TextContrastCheck" />
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/poppinsbold"
+            android:gravity="center"
+            android:text="Cart2Go"
+            android:textColor="#FF5722"
+            android:textSize="30sp" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <GridLayout
+            android:id="@+id/GridLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alignmentMode="alignMargins"
+            android:columnCount="2"
+            android:columnOrderPreserved="false"
+            android:rowCount="1">
 
+            <ImageView
+                android:id="@+id/imagepreview"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginEnd="10dp"
+                android:layout_column="0"
+                app:srcCompat="@mipmap/ic_launcher_round" />
 
-    <Button
-        android:id="@+id/sbarcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="35dp"
-        android:layout_toEndOf="@+id/textInputLayoutBarcode"
-        android:background="@drawable/custom_button"
-        android:text="Scan Barcode"
-        android:textColor="#FFFFFF" />
+            <LinearLayout
+                android:layout_columnWeight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="19dp"
+                android:layout_column="1">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutBrand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayoutBarcode"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="35dp"
-        android:layout_toEndOf="@+id/bcheckbox"
-        android:hint="Brand"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+                <TextView
+                    android:id="@+id/BarcodeDetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Barcode"
+                    android:textColor="#6f6f6f"
+                    android:textSize="18sp"
+                    android:hint="Barcode"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ap_brand"
-            android:layout_width="320dp"
+                <TextView
+                    android:id="@+id/BrandDetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Brand"
+                    android:textColor="#6f6f6f"
+                    android:textSize="18sp"
+                    android:hint="Brand"/>
+
+                <TextView
+                    android:id="@+id/VariantDetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Variant"
+                    android:textColor="#6f6f6f"
+                    android:textSize="18sp"
+                    android:hint="Variant"/>
+
+                <TextView
+                    android:id="@+id/VolumeDetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Volume"
+                    android:textColor="#6f6f6f"
+                    android:textSize="18sp"
+                    android:hint="Volume"/>
+            </LinearLayout>
+
+        </GridLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:drawableEnd="@drawable/ic_baseline_create_24"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColorHint="#546E7A"
-            tools:ignore="TextContrastCheck,TextContrastCheck" />
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="5dp">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:id="@+id/DescriptionDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Description"
+                android:textColor="#6f6f6f"
+                android:textSize="18sp"
+                android:hint="Description"/>
+        </LinearLayout>
 
-    <CheckBox
-        android:id="@+id/bcheckbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayoutBarcode"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="19dp"
-        android:layout_weight="1" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutVariant"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayoutBrand"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="35dp"
-        android:layout_toEndOf="@+id/vcheckbox"
-        android:hint="Variant"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ap_variant"
-            android:layout_width="320dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:drawableEnd="@drawable/ic_variant"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColorHint="#546E7A"
-            tools:ignore="TextContrastCheck,TextContrastCheck" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="5dp">
 
-    <CheckBox
-        android:id="@+id/vcheckbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayoutBrand"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1" />
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alignmentMode="alignMargins"
+                android:columnCount="2"
+                android:columnOrderPreserved="false"
+                android:rowCount="1">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutVolume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayoutVariant"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="35dp"
-        android:layout_toEndOf="@+id/vlcheckbox"
-        android:hint="Volume"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+                <Button
+                    android:layout_columnWeight="1"
+                    android:id="@+id/BarcodeButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ap_volume"
-            android:layout_width="320dp"
+                    android:layout_marginEnd="12dp"
+                    android:background="@drawable/custom_button"
+                    android:text="Barcode"
+                    android:textColor="#FFFFFF" />
+
+                <Button
+                    android:layout_columnWeight="1"
+                    android:id="@+id/Editbutton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_marginStart="75dp"
+                    android:background="@drawable/custom_button"
+                    android:text="Edit Details"
+                    android:textColor="#FFFFFF" />
+            </GridLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:drawableEnd="@drawable/ic_volume"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColorHint="#546E7A"
-            tools:ignore="TextContrastCheck,TextContrastCheck" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <CheckBox
-        android:id="@+id/vlcheckbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayoutVariant"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayoutVolume"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="35dp"
-        android:layout_toEndOf="@+id/descheckbox"
-        android:hint="Description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ap_description"
-            android:layout_width="320dp"
-            android:layout_height="match_parent"
-            android:drawableEnd="@drawable/ic_baseline_create_24"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColorHint="#546E7A"
-            tools:ignore="TextContrastCheck,TextContrastCheck" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <CheckBox
-        android:id="@+id/descheckbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayoutVolume"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1" />
-
-
-    <Button
-        android:id="@+id/addProductButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textInputLayoutDescription"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="99dp"
-        android:layout_toEndOf="@+id/imagepreview"
-        android:background="@drawable/custom_button"
-        android:text="Add product"
-        android:textColor="#FFFFFF" />
-
-    <ImageView
-        android:id="@+id/imagepreview"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_below="@+id/textInputLayoutDescription"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="38dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.046"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@mipmap/ic_launcher_round" />
-
-
+            android:layout_marginTop="15dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/addProductButton"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:background="@drawable/custom_button"
+                android:text="Add product"
+                android:textColor="#FFFFFF" />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
