--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -6,167 +6,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Add_Product">
 
-
-    <LinearLayout
-        android:id="@+id/MainLayout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="top"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/branding"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/poppinsbold"
-            android:gravity="center"
-            android:text="Cart2Go"
-            android:textColor="#FF5722"
-            android:textSize="30sp" />
-
-        <GridLayout
-            android:id="@+id/GridLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:alignmentMode="alignMargins"
-            android:columnCount="2"
-            android:columnOrderPreserved="false"
-            android:rowCount="1">
-
-            <ImageView
-                android:id="@+id/imagepreview"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginEnd="10dp"
-                android:layout_column="0"
-                app:srcCompat="@mipmap/ic_launcher_round" />
-
-            <LinearLayout
-                android:layout_columnWeight="1"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="19dp"
-                android:layout_column="1">
-
-                <TextView
-                    android:id="@+id/BarcodeDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Barcode"
-                    android:textColor="#6f6f6f"
-                    android:textSize="18sp"
-                    android:hint="Barcode"/>
-
-                <TextView
-                    android:id="@+id/BrandDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Brand"
-                    android:textColor="#6f6f6f"
-                    android:textSize="18sp"
-                    android:hint="Brand"/>
-
-                <TextView
-                    android:id="@+id/VariantDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Variant"
-                    android:textColor="#6f6f6f"
-                    android:textSize="18sp"
-                    android:hint="Variant"/>
-
-                <TextView
-                    android:id="@+id/VolumeDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Volume"
-                    android:textColor="#6f6f6f"
-                    android:textSize="18sp"
-                    android:hint="Volume"/>
-            </LinearLayout>
-
-        </GridLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="5dp">
-
-            <TextView
-                android:id="@+id/DescriptionDetail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Description"
-                android:textColor="#6f6f6f"
-                android:textSize="18sp"
-                android:hint="Description"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:alignmentMode="alignMargins"
-                android:columnCount="2"
-                android:columnOrderPreserved="false"
-                android:rowCount="1">
-
-                <Button
-                    android:layout_columnWeight="1"
-                    android:id="@+id/BarcodeButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
-
-                    android:layout_marginEnd="12dp"
-                    android:background="@drawable/custom_button"
-                    android:text="Barcode"
-                    android:textColor="#FFFFFF" />
-
-                <Button
-                    android:layout_columnWeight="1"
-                    android:id="@+id/Editbutton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="1"
-                    android:layout_marginStart="75dp"
-                    android:background="@drawable/custom_button"
-                    android:text="Edit Details"
-                    android:textColor="#FFFFFF" />
-            </GridLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/addProductButton"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:background="@drawable/custom_button"
-                android:text="Add product"
-                android:textColor="#FFFFFF" />
-        </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
